Подключены стили; добавлены классы ссылкам, обертка для информационной части карточек товаров и модификаторы серой кнопке и блоку контактов

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Кэт энерджи</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
@@ -12,13 +13,13 @@
       <nav class="site-nav page-header__site-nav">
         <ul class="page-header__nav-list menu">
           <li class="page-header__menu-item">
-            <a href="index.html">Главная</a>
+            <a class="page-header__menu-link" href="index.html">Главная</a>
           </li>
           <li class="page-header__menu-item">
-            <a>Каталог продукции</a>
+            <a class="page-header__menu-link">Каталог продукции</a>
           </li>
           <li class="page-header__menu-item">
-            <a href="form.html">Подбор программы</a>
+            <a class="page-header__menu-link" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -27,11 +28,12 @@
     <main class="page-main">
       <h1 class="visually-hidden">Каталог Cat Energy</h1>
       <section class="catalog">
-        <h2 class="catalog__title">Каталог продукции</h2>
+        <h2 class="catalog__title section-title">Каталог продукции</h2>
         <ul class="catalog__list products">
           <li class="catalog__item product">
-            <img class="catalog__product-photo" src="img/chiken-pro500.jpg" alt="Cat Energy Pro 500 г с курицей">
-            <h3 class="catalog__product-title">Cat Energy Pro 500 г</h3>
+            <img class="catalog__product-photo" src="img/chiken-pro500.jpg" width="140" height="144" alt="Cat Energy Pro 500 г с курицей">
+            <div class="catalog__product-description">
+              <h3 class="catalog__product-title">Cat Energy Pro 500 г</h3>
             <table class="catalog__product-info product-feature">
               <tr>
                 <td class="catalog__product-argument">Объем</td>
@@ -46,127 +48,140 @@
                 <td class="catalog__product-value">700 Р.</td>
               </tr>
             </table>
+            </div>
             <a class="catalog__btn btn" href="#">Заказать</a>
           </li>
           <li class="catalog__item product">
-            <img class="catalog__product-photo" src="img/chiken-pro1000.jpg" alt="Cat Energy Pro 1000 г с курицей">
-            <h3 class="catalog__product-title">Cat Energy Pro 1000 г</h3>
-            <table class="catalog__product-info product-feature">
-              <tr>
-                <td class="catalog__product-argument">Объем</td>
-                <td class="catalog__product-value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="catalog__product-argument">Вкус</td>
-                <td class="catalog__product-value">Курица</td>
-              </tr>
-              <tr>
-                <td class="catalog__product-argument">Цена</td>
-                <td class="catalog__product-value">1000 Р.</td>
-              </tr>
-            </table>
+            <img class="catalog__product-photo" src="img/chiken-pro1000.jpg" width="140" height="144" alt="Cat Energy Pro 1000 г с курицей">
+            <div class="catalog__product-description">
+              <h3 class="catalog__product-title">Cat Energy Pro 1000 г</h3>
+              <table class="catalog__product-info product-feature">
+                <tr>
+                  <td class="catalog__product-argument">Объем</td>
+                  <td class="catalog__product-value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__product-argument">Вкус</td>
+                  <td class="catalog__product-value">Курица</td>
+                </tr>
+                <tr>
+                  <td class="catalog__product-argument">Цена</td>
+                  <td class="catalog__product-value">1000 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__product-btn btn" href="#">Заказать</a>
           </li>
           <li class="catalog__item product">
-            <img class="catalog__product-photo" src="img/fish-pro500.jpg" alt="Cat Energy Pro 500 г с рыбой">
-            <h3 class="catalog__product-title">Cat Energy Pro 500 г</h3>
-            <table class="catalog__product-info product-feature">
-              <tr>
-                <td class="catalog__product-argument">Объем</td>
-                <td class="catalog__product-value">500 г</td>
-              </tr>
-              <tr>
-                <td class="catalog__product-argument">Вкус</td>
-                <td class="catalog__product-value">Рыба</td>
-              </tr>
-              <tr>
-                <td class="catalog__product-argument">Цена</td>
-                <td class="catalog__product-value">700 Р.</td>
-              </tr>
-            </table>
+            <img class="catalog__product-photo" src="img/fish-pro500.jpg" width="140" height="144" alt="Cat Energy Pro 500 г с рыбой">
+            <div class="catalog__product-description">
+              <h3 class="catalog__product-title">Cat Energy Pro 500 г</h3>
+              <table class="catalog__product-info product-feature">
+                <tr>
+                  <td class="catalog__product-argument">Объем</td>
+                  <td class="catalog__product-value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__product-argument">Вкус</td>
+                  <td class="catalog__product-value">Рыба</td>
+                </tr>
+                <tr>
+                  <td class="catalog__product-argument">Цена</td>
+                  <td class="catalog__product-value">700 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__product-btn btn" href="#">Заказать</a>
           </li>
           <li class="catalog__item product">
-            <img class="catalog__product-photo" src="img/fish-pro1000.jpg" alt="Cat Energy Pro 1000 г с рыбой">
-            <h3 class="catalog__product-title">Cat Energy Pro 1000 г</h3>
-            <table class="catalog__product-info product-feature">
-              <tr>
-                <td class="catalog__product-argument">Объем</td>
-                <td class="catalog__product-value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="catalog__product-argument">Вкус</td>
-                <td class="catalog__product-value">Рыба</td>
-              </tr>
-              <tr>
-                <td class="catalog__product-argument">Цена</td>
-                <td class="catalog__product-value">1000 Р.</td>
-              </tr>
-            </table>
+            <img class="catalog__product-photo" src="img/fish-pro1000.jpg" width="140" height="144" alt="Cat Energy Pro 1000 г с рыбой">
+            <div class="catalog__product-description">
+              <h3 class="catalog__product-title">Cat Energy Pro 1000 г</h3>
+              <table class="catalog__product-info product-feature">
+                <tr>
+                  <td class="catalog__product-argument">Объем</td>
+                  <td class="catalog__product-value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__product-argument">Вкус</td>
+                  <td class="catalog__product-value">Рыба</td>
+                </tr>
+                <tr>
+                  <td class="catalog__product-argument">Цена</td>
+                  <td class="catalog__product-value">1000 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__product-btn btn" href="#">Заказать</a>
           </li>
           <li class="catalog__item product">
-            <img class="catalog__product-photo" src="img/buckwheat-slim500.jpg" alt="Cat Energy Slim 500 г с гречкой">
-            <h3 class="catalog__product-title">Cat Energy Slim 500 г</h3>
-            <table class="catalog__product-info product-feature">
-              <tr>
-                <td class="catalog__product-argument">Объем</td>
-                <td class="catalog__product-value">500 г</td>
-              </tr>
-              <tr>
-                <td class="catalog__product-argument">Вкус</td>
-                <td class="catalog__product-value">Гречка</td>
-              </tr>
-              <tr>
-                <td class="catalog__product-argument">Цена</td>
-                <td class="catalog__product-value">400 Р.</td>
-              </tr>
-            </table>
+            <img class="catalog__product-photo" src="img/buckwheat-slim500.jpg" width="140" height="144" alt="Cat Energy Slim 500 г с гречкой">
+            <div class="catalog__product-description">
+              <h3 class="catalog__product-title">Cat Energy Slim 500 г</h3>
+              <table class="catalog__product-info product-feature">
+                <tr>
+                  <td class="catalog__product-argument">Объем</td>
+                  <td class="catalog__product-value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__product-argument">Вкус</td>
+                  <td class="catalog__product-value">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="catalog__product-argument">Цена</td>
+                  <td class="catalog__product-value">400 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__product-btn btn" href="#">Заказать</a>
           </li>
           <li class="catalog__item product">
-            <img class="catalog__product-photo" src="img/buckwheat-slim1000.jpg" alt="Cat Energy Pro 1000 г с гречкой">
-            <h3 class="catalog__product-title">Cat Energy Slim 1000 г</h3>
-            <table class="catalog__product-info product-feature">
-              <tr>
-                <td class="catalog__product-argument">Объем</td>
-                <td class="catalog__product-value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="catalog__product-argument">Вкус</td>
-                <td class="catalog__product-value">Гречка</td>
-              </tr>
-              <tr>
-                <td class="catalog__product-argument">Цена</td>
-                <td class="catalog__product-value">700 Р.</td>
-              </tr>
-            </table>
+            <img class="catalog__product-photo" src="img/buckwheat-slim1000.jpg" width="140" height="144" alt="Cat Energy Pro 1000 г с гречкой">
+            <div class="catalog__product-description">
+              <h3 class="catalog__product-title">Cat Energy Slim 1000 г</h3>
+              <table class="catalog__product-info product-feature">
+                <tr>
+                  <td class="catalog__product-argument">Объем</td>
+                  <td class="catalog__product-value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__product-argument">Вкус</td>
+                  <td class="catalog__product-value">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="catalog__product-argument">Цена</td>
+                  <td class="catalog__product-value">700 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__product-btn btn" href="#">Заказать</a>
           </li>
           <li class="catalog__item product">
-            <img class="catalog__product-photo" src="img/rice-slim500.jpg" alt="Cat Energy Slim 500 г с рисом">
-            <h3 class="catalog__product-title">Cat Energy Slim 500 г</h3>
-            <table class="catalog__product-info product-feature">
-              <tr>
-                <td class="catalog__product-argument">Объем</td>
-                <td class="catalog__product-value">500 г</td>
-              </tr>
-              <tr>
-                <td class="catalog__product-argument">Вкус</td>
-                <td class="catalog__product-value">Рис</td>
-              </tr>
-              <tr>
-                <td class="catalog__product-argument">Цена</td>
-                <td class="catalog__product-value">500 Р.</td>
-              </tr>
-            </table>
+            <img class="catalog__product-photo" src="img/rice-slim500.jpg" width="140" height="144" alt="Cat Energy Slim 500 г с рисом">
+            <div class="catalog__product-description">
+              <h3 class="catalog__product-title">Cat Energy Slim 500 г</h3>
+              <table class="catalog__product-info product-feature">
+                <tr>
+                  <td class="catalog__product-argument">Объем</td>
+                  <td class="catalog__product-value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__product-argument">Вкус</td>
+                  <td class="catalog__product-value">Рис</td>
+                </tr>
+                <tr>
+                  <td class="catalog__product-argument">Цена</td>
+                  <td class="catalog__product-value">500 Р.</td>
+                </tr>
+              </table>
+            </div>
             <a class="catalog__product-btn btn" href="#">Заказать</a>
           </li>
         </ul>
         <div class="catalog__all-products more-goods">
           <h3 class="catalog__more-goods-title">Показать еще 100500 товаров</h3>
           <p class="catalog__more-goods-description">На самом деле вкусов гораздо больше!</p>
-          <a class="catalog__more-goods-btn btn" href="#">Показать все</a>
+          <a class="catalog__more-goods-btn btn btn--grey" href="#">Показать все</a>
         </div>
       </section>
       <section class="extra-goods">
@@ -210,7 +225,7 @@
         <h2 class="visually-hidden">Акция</h2>
         <p class="stock__info">Закажите все и получите чехол для кота в подарок!</p>
       </section>
-      <section class="contacts">
+      <section class="contacts contacts--grey">
         <h2 class="contacts__title">Приглашаем к сотруднечеству дилеров!</h2>
         <p class="contacts__info">ул. Большая Конюшенная, д. 19/8, Санкт-Петербург</p>
         <img class="contacts__map" src="img/map.jpg" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
@@ -232,7 +247,7 @@
         </li>
       </ul>
       <div class="page-footer__copyright">
-        <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
     </footer>
   </body>
