Подключены стили; добавлены классы ссылкам в меню и копирайте, заголовку секции и модификатор блоку контактов

--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Кэт энерджи</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
@@ -12,13 +13,13 @@
       <nav class="site-nav page-header__site-nav">
         <ul class="page-header__nav-list menu">
           <li class="page-header__menu-item">
-            <a href="index.html">Главная</a>
+            <a class="page-header__menu-link" href="index.html">Главная</a>
           </li>
           <li class="page-header__menu-item">
-            <a href="catalog.html">Каталог продукции</a>
+            <a class="page-header__menu-link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="page-header__menu-item">
-            <a>Подбор программы</a>
+            <a class="page-header__menu-link">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -27,7 +28,7 @@
     <main class="page main">
       <h1 class="visually-hidden">Подбор программы питания Cat Energy</h1>
       <section class="program-selection">
-        <h2 class="program-selection__title">Подбор программы</h2>
+        <h2 class="program-selection__title section-title">Подбор программы</h2>
         <form class="program-selection__form" action="https://echo.htmlacademy.ru" method="post">
           <p class="program-selection__intro">Заполните анкету и мы подберем программу питания для вашего кота</p>
           <fieldset class="program-selection__cat-info cat-info">
@@ -105,7 +106,7 @@
           <p><sup class="program-selection__required-field">*</sup> - Обязательные поля</p>
         </form>
       </section>
-      <section class="contacts">
+      <section class="contacts contacts--grey">
         <h2 class="contacts__title">Приглашаем к сотруднечеству дилеров!</h2>
         <p class="contacts__info">ул. Большая Конюшенная, д. 19/8, Санкт-Петербург</p>
         <img class="contacts__map" src="img/map.jpg" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
@@ -127,7 +128,7 @@
         </li>
       </ul>
       <div class="page-footer__copyright">
-        <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
     </footer>
   </body>
