Добавлены классы кнопкам и списку определений в блоке дополнительных товаров и обертка для содержимого блока с акцией

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -189,41 +189,43 @@
         <ul class="extra-goods__list">
           <li class="extra-goods__item">
             <h3 class="extra-goods__item-title">Сахарозаменитель</h3>
-            <dl>
+            <dl class="extra-goods__info">
               <dt class="extra-goods__volume">1 упаковка (100 г)</dt>
               <dd class="extra-goods__price">200 Р.</dd>
             </dl>
-            <a class="extra-goods__btn" href="#">Заказать</a>
+            <a class="extra-goods__btn btn" href="#">Заказать</a>
           </li>
           <li class="extra-goods__item">
             <h3 class="extra-goods__item-title">Питьевая вода</h3>
-            <dl>
+            <dl class="extra-goods__info">
               <dt class="extra-goods__volume">5 литров</dt>
               <dd class="extra-goods__price">50 Р.</dd>
             </dl>
-            <a class="extra-goods__btn"  href="#">Заказать</a>
+            <a class="extra-goods__btn btn"  href="#">Заказать</a>
           </li>
           <li class="extra-goods__item">
             <h3 class="extra-goods__item-title">Молоко</h3>
-            <dl>
+            <dl class="extra-goods__info">
               <dt class="extra-goods__volume">1 литр</dt>
               <dd class="extra-goods__price">100 Р.</dd>
             </dl>
-            <a class="extra-goods__btn" href="#">Заказать</a>
+            <a class="extra-goods__btn btn" href="#">Заказать</a>
           </li>
           <li class="extra-goods__item">
             <h3 class="extra-goods__item-title">Витамины</h3>
-            <dl>
+            <dl class="extra-goods__info">
               <dt class="extra-goods__volume">1 упаковка (30 г)</dt>
               <dd class="extra-goods__price">300 Р.</dd>
             </dl>
-            <a class="extra-goods__btn" href="#">Заказать</a>
+            <a class="extra-goods__btn btn" href="#">Заказать</a>
           </li>
         </ul>
       </section>
       <section class="stock">
-        <h2 class="visually-hidden">Акция</h2>
-        <p class="stock__info">Закажите все и получите чехол для кота в подарок!</p>
+        <div class="stock__container">
+          <h2 class="visually-hidden">Акция</h2>
+          <p class="stock__info">Закажите все и получите чехол для кота в подарок!</p>
+        </div>
       </section>
       <section class="contacts contacts--grey">
         <h2 class="contacts__title">Приглашаем к сотруднечеству дилеров!</h2>
