--- a/source/index.html
+++ b/source/index.html
@@ -2,32 +2,37 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кэт энерджи</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
-      <a class="logo page-header__logo">
-        <img class="page-header__logo-img" src="img/logo.svg" alt="логотип Cat energy" >
-      </a>
-      <nav class="site-nav page-header__site-nav">
-        <ul class="page-header__nav-list menu">
-          <li class="page-header__menu-item">
-            <a class="page-header__menu-link">Главная</a>
-          </li>
-          <li class="page-header__menu-item">
-            <a class="page-header__menu-link" href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="page-header__menu-item">
-            <a class="page-header__menu-link" href="form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
-      <button class="page-header__burger-btn burger-btn" type="button" aria-label="Кнопка открыть меню">
-        <span class="burger-btn__line"></span>
-        <span class="burger-btn__line"></span>
-        <span class="burger-btn__line"></span>
-      </button>
+      <div class="page-header__wrapper">  
+        <div class="page-header__top-header">
+          <a class="logo page-header__logo">
+          <img class="page-header__logo-img" src="img/logo.svg" alt="логотип Cat energy" >
+          </a>
+          <button class="page-header__burger-btn burger-btn" type="button" aria-label="Кнопка открыть меню">
+            <span class="burger-btn__line"></span>
+            <span class="burger-btn__line"></span>
+            <span class="burger-btn__line"></span>
+          </button>
+        </div> 
+        <nav class="site-nav page-header__site-nav">
+          <ul class="page-header__nav-list menu">
+            <li class="page-header__menu-item">
+              <a class="page-header__menu-link page-header__menu-link--current">Главная</a>
+            </li>
+            <li class="page-header__menu-item">
+              <a class="page-header__menu-link" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="page-header__menu-item">
+              <a class="page-header__menu-link" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>  
     </header>
     <main class="page-main">
       <h1 class="visually-hidden">Cat energy</h1>
