--- a/source/index.html
+++ b/source/index.html
@@ -37,12 +37,14 @@
     <main class="page-main">
       <h1 class="visually-hidden">Cat energy</h1>
       <section class="promo">
-        <div class="promo__text">
-          <h2 class="promo__title">Функциональное питание для котов</h2>
-          <p class="promo__intro">Занялся собой? Займись котом!</p>
-        </div>
-        <img class="promo__img" src="img/promo.png" alt="Cat energy Pro с курицей">
-        <a class="btn promo__btn" href="form.html">Подобрать программу</a>
+        <div class="promo__wrapper">
+          <div class="promo__text">
+            <h2 class="promo__title">Функциональное питание для котов</h2>
+            <p class="promo__intro">Занялся собой? Займись котом!</p>
+          </div>
+          <img class="promo__img" src="img/promo.png" alt="Cat energy Pro с курицей">
+          <a class="btn promo__btn" href="form.html">Подобрать программу</a>
+        </div>  
       </section>
       <section class="nutrition-programs">
         <h2 class="visually-hidden">Программы питания для котов</h2>
