--- a/source/index.html
+++ b/source/index.html
@@ -47,19 +47,21 @@
         </div>  
       </section>
       <section class="nutrition-programs">
-        <h2 class="visually-hidden">Программы питания для котов</h2>
-        <ul class="program-list nutrition-programs__list">
-          <li class="nutrition-programs__item program-item">
-            <h3 class="nutrition-programs__item-title">Похудение</h3>
-            <p class="nutrition-programs__item-info">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="nutrition-programs__btn" href="#" >Каталог Slim</a>
-          </li>
-          <li class="nutrition-programs__item program-item">
-            <h3 class="nutrition-programs__item-title">Набор массы</h3>
-            <p class="nutrition-programs__item-info">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="nutrition-programs__btn" href="#" >Каталог Pro</a>
-          </li>
-        </ul>
+        <div class="nutrition-programs__wrapper">
+          <h2 class="visually-hidden">Программы питания для котов</h2>
+          <ul class="program-list nutrition-programs__list">
+            <li class="nutrition-programs__item program-item">
+              <h3 class="nutrition-programs__item-title">Похудение</h3>
+              <p class="nutrition-programs__item-info">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+              <a class="nutrition-programs__btn" href="#" >Каталог Slim</a>
+            </li>
+            <li class="nutrition-programs__item program-item">
+              <h3 class="nutrition-programs__item-title">Набор массы</h3>
+              <p class="nutrition-programs__item-info">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+              <a class="nutrition-programs__btn" href="#" >Каталог Pro</a>
+            </li>
+          </ul>
+        </div>  
       </section>
       <section class="usage">
         <h2 class="usage__title section-title">Как это работает</h2>
