--- a/source/index.html
+++ b/source/index.html
@@ -122,23 +122,25 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a class="page-footer__logo">
-        <img src="img/footer-logo.svg" alt="Логотип Cat Energy">
-      </a>
-      <ul class="page-footer__social-list social-buttons">
-        <li class="page-footer__social-item">
-          <a class="page-footer__social-btn" href="#" aria-label="мы ВКонтакте">VK</a>
-        </li>
-        <li class="page-footer__social-item">
-          <a class="page-footer__social-btn" href="#" aria-label="мы в Instagram">Instagram</a>
-        </li>
-        <li class="page-footer__social-item">
-          <a class="page-footer__social-btn" href="#" aria-label="мы в Facebook">Facebook</a>
-        </li>
-      </ul>
-      <div class="page-footer__copyright">
-        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-      </div>
+      <div class="page-footer__wrapper">
+        <a class="page-footer__logo">
+          <img class="page-footer__logo-img" src="img/footer-logo.svg" alt="Логотип Cat Energy">
+        </a>
+        <ul class="page-footer__social-list social-buttons">
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-btn" href="#" aria-label="мы ВКонтакте">VK</a>
+          </li>
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-btn" href="#" aria-label="мы в Instagram">Ins</a>
+          </li>
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-btn" href="#" aria-label="мы в Facebook">FB</a>
+          </li>
+        </ul>
+        <div class="page-footer__copyright">
+          <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        </div>
+      </div>  
     </footer>
   </body>
 </html>
