--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
       <div class="page-header__wrapper">  
         <div class="page-header__top-header">
           <a class="logo page-header__logo">
-          <img class="page-header__logo-img" src="img/logo.svg" alt="логотип Cat energy" >
+            <img class="page-header__logo-img" src="img/logo.svg" alt="логотип Cat energy" >
           </a>
           <button class="page-header__burger-btn burger-btn" type="button" aria-label="Кнопка открыть меню">
             <span class="burger-btn__line"></span>
@@ -22,13 +22,13 @@
         <nav class="site-nav page-header__site-nav">
           <ul class="page-header__nav-list menu">
             <li class="page-header__menu-item">
-              <a class="page-header__menu-link page-header__menu-link--current">Главная</a>
+              <a class="page-header__menu-link page-header__menu-link--white page-header__menu-link--current">Главная</a>
             </li>
             <li class="page-header__menu-item">
-              <a class="page-header__menu-link" href="catalog.html">Каталог продукции</a>
+              <a class="page-header__menu-link page-header__menu-link--white" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="page-header__menu-item">
-              <a class="page-header__menu-link" href="form.html">Подбор программы</a>
+              <a class="page-header__menu-link page-header__menu-link--white" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </nav>
