Убраны лишние пробелы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,12 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кэт энерджи</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header__wrapper">  
+      <div class="page-header__wrapper">
         <div class="page-header__top-header">
           <a class="logo page-header__logo" href="index.html">
             <img class="page-header__logo-img" src="img/logo.svg" alt="логотип Cat energy">
@@ -17,7 +18,7 @@
             <span class="burger-btn__line"></span>
             <span class="burger-btn__line"></span>
           </button>
-        </div> 
+        </div>
         <nav class="site-nav page-header__site-nav">
           <ul class="page-header__nav-list menu">
             <li class="page-header__menu-item">
@@ -31,7 +32,7 @@
             </li>
           </ul>
         </nav>
-      </div>  
+      </div>
     </header>
     <main class="page-main">
       <h1 class="visually-hidden">Каталог Cat Energy</h1>
@@ -262,7 +263,7 @@
         <div class="page-footer__copyright">
           <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
         </div>
-      </div>  
+      </div>
     </footer>
   </body>
 </html>
