--- a/source/index.html
+++ b/source/index.html
@@ -120,8 +120,12 @@
         </div>
       </section>
       <section class="contacts">
-        <h2 class="contacts__title">Приглашаем к сотруднечеству дилеров!</h2>
-        <p class="contacts__info">ул. Большая Конюшенная, д. 19/8, Санкт-Петербург</p>
+        <div class="contacts__info">
+          <h2 class="contacts__title">Приглашаем<br> к сотруднечеству дилеров!</h2>
+          <p class="contacts__address">
+          <span>ул. Большая Конюшенная, д. 19/8</span>
+          <span>Санкт-Петербург</span></p>
+        </div>
         <img class="contacts__map" src="img/map.jpg" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
       </section>
     </main>
