Добавлен центровщик в блок контактов

--- a/source/form.html
+++ b/source/form.html
@@ -127,9 +127,13 @@
           </form>
         </div>
       </section>
-      <section class="contacts contacts--grey">
-        <h2 class="contacts__title">Приглашаем к сотруднечеству дилеров!</h2>
-        <p class="contacts__info">ул. Большая Конюшенная, д. 19/8, Санкт-Петербург</p>
+      <section class="contacts">
+        <div class="contacts__info contacts__info--grey">
+          <h2 class="contacts__title">Приглашаем<br> к сотруднечеству дилеров!</h2>
+          <p class="contacts__address">
+          <span>ул. Большая Конюшенная, д. 19/8</span>
+          <span>Санкт-Петербург</span></p>
+        </div>
         <img class="contacts__map" src="img/map.jpg" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
       </section>
     </main>
