Добавлен центровщик элементу с адресом в блоке контактов; удалена лишняя обертка у ссылки-копирайта

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -243,14 +243,16 @@
           </div>
         </div>
       </section>
-      <section class="contacts">
-        <div class="contacts__info contacts__info--grey">
-          <h2 class="contacts__title">Приглашаем<br> к сотруднечеству дилеров!</h2>
-          <p class="contacts__address">
-          <span>ул. Большая Конюшенная, д. 19/8</span>
-          <span>Санкт-Петербург</span></p>
+      <section class="contacts contacts--grey">
+        <div class="contacts__info-wrapper">
+          <div class="contacts__info">
+            <h2 class="contacts__title">Приглашаем<br> к сотруднечеству дилеров!</h2>
+            <p class="contacts__address">
+            <span>ул. Большая Конюшенная, д. 19/8</span>
+            <span>Санкт-Петербург</span></p>
+          </div>
+          <img class="contacts__map" src="img/map.jpg" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
         </div>
-        <img class="contacts__map" src="img/map.jpg" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
       </section>
     </main>
     <footer class="page-footer">
@@ -269,9 +271,7 @@
             <a class="page-footer__social-btn" href="#" aria-label="мы в Facebook">FB</a>
           </li>
         </ul>
-        <div class="page-footer__copyright">
-          <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        </div>
+        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
       </div>
     </footer>
   </body>
