--- a/source/index.html
+++ b/source/index.html
@@ -103,7 +103,10 @@
               <dt class="example__data-description">Затрачено времени</dt>
               <dd class="example__data-value">60 дней</dd>
             </dl>
-            <b class="example__sum">Затраты на питание: 15 000 руб.</b>
+            <b class="example__sum">
+              <span>Затраты на питание:</span>
+              <span>15 000 руб.</span>
+            </b>
           </div>
           <figure class="example__photo slider">
             <ul class="slider__list">
