В слайдер добавили разметку тоглера

--- a/source/index.html
+++ b/source/index.html
@@ -127,6 +127,10 @@
             </ul>
             <div class="slider__controls">
               <button class="slider__btn slider__btn--before" type="button">Было</button>
+              <div class="slider__togler">
+                <div class="slider__togler-scale"></div>
+                <div class="slider__togler-control"></div>
+              </div>
               <button class="slider__btn slider__btn--after" type="button">Стало</button>
             </div>
           </figure>
