Исправлены опечатки на станице формы

--- a/source/form.html
+++ b/source/form.html
@@ -76,7 +76,7 @@
               <label class="program-selection__input-label">
                 <input class="visually-hidden" type="radio" name="program-type" value="need-advice">
                 <span class="program-selection__radio-btn"></span>
-                Не знаю (нужен совет)
+                Не знаю (нужен ваш совет)
               </label>
             </fieldset>
             </div>
@@ -108,7 +108,7 @@
             </fieldset>
             <fieldset class="program-selection__comment">
               <legend class="program-selection__fieldset-title">Комментарий</legend>
-              <textarea class="program-selection__comment-field" name="comment-field" rows="5" placeholder="Расскажите о всех повадках кота"></textarea>
+              <textarea class="program-selection__comment-field" name="comment-field" rows="5" placeholder="Расскажите обо всех повадках кота"></textarea>
             </fieldset>
             <fieldset class="program-selection__extra-field">
               <legend class="program-selection__fieldset-title">Дополнительно</legend>
@@ -137,7 +137,7 @@
             </fieldset>
             <div class="program-selection__group">
               <button class="program-selection__btn btn" type="submit">Отправить заявку</button>
-              <p class="program-selection__footnote"><sup class="program-selection__required-field">*</sup> - Обязательные поля</p>
+              <p class="program-selection__footnote"><sup class="program-selection__required-field">*</sup> &mdash; Обязательные поля</p>
             </div>
           </form>
         </div>
