Подключены js-файлы и изображения для экранов с разной плотностью пикселей

--- a/source/form.html
+++ b/source/form.html
@@ -18,7 +18,7 @@
           </picture>
         </a>
         </div>
-        <nav class="site-nav page-header__site-nav page-header__site-nav--opened">
+        <nav class="site-nav page-header__site-nav page-header__site-nav--opened page-header__site-nav--no-js">
           <button class="page-header__burger-btn burger-btn" type="button" aria-label="Кнопка открыть меню">
             <span class="burger-btn__line"></span>
           </button>
@@ -221,5 +221,7 @@
         </a>
       </div>
     </footer>
+    <script src="js/picturefill.min.js"></script>
+    <script src="js/page-header.js"></script>
   </body>
 </html>
