--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,9 +16,9 @@
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
             <img class="page-header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="логотип Cat energy">
           </picture>
-        </a>
+          </a>
         </div>
-        <nav class="site-nav page-header__site-nav page-header__site-nav--opened">
+        <nav class="site-nav page-header__site-nav page-header__site-nav--opened page-header__site-nav--no-js">
           <button class="page-header__burger-btn burger-btn" type="button" aria-label="Кнопка открыть меню">
             <span class="burger-btn__line"></span>
           </button>
@@ -45,9 +45,9 @@
             <li class="catalog__item product">
               <a href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/chicken-small-desktop@1x.png">
-                  <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png">
-                  <img class="catalog__product-photo" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 500 г с курицей">
+                  <source media="(min-width: 1440px)" srcset="img/chicken-small-desktop@1x.png 1x,img/chicken-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+                  <img class="catalog__product-photo" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy Pro 500 г с курицей">
                 </picture>
               </a>
               <div class="catalog__product-description">
@@ -74,9 +74,9 @@
             <li class="catalog__item product">
               <a href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/chicken-big-desktop@1x.png">
-                  <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png">
-                  <img class="catalog__product-photo catalog__product-photo--big" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 1000 г с курицей">
+                  <source media="(min-width: 1440px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+                  <img class="catalog__product-photo catalog__product-photo--big" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy Pro 1000 г с курицей">
                 </picture>
               </a>
               <div class="catalog__product-description">
@@ -103,9 +103,9 @@
             <li class="catalog__item product">
               <a href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/fish-small-desktop@1x.png">
-                  <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png">
-                  <img class="catalog__product-photo" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 500 г с рыбой">
+                  <source media="(min-width: 1440px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+                  <img class="catalog__product-photo" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy Pro 500 г с рыбой">
                 </picture>
               </a>
               <div class="catalog__product-description">
@@ -132,9 +132,9 @@
             <li class="catalog__item product">
               <a href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/fish-big-desktop@1x.png">
-                  <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png">
-                  <img class="catalog__product-photo catalog__product-photo--big" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 1000 г с рыбой">
+                  <source media="(min-width: 1440px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+                  <img class="catalog__product-photo catalog__product-photo--big" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy Pro 1000 г с рыбой">
                 </picture>
               </a>
               <div class="catalog__product-description">
@@ -161,9 +161,9 @@
             <li class="catalog__item product">
               <a href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/buckwheat-small-desktop@1x.png">
-                  <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png">
-                  <img class="catalog__product-photo" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г с гречкой">
+                  <source media="(min-width: 1440px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                  <img class="catalog__product-photo" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy Slim 500 г с гречкой">
                 </picture>
               </a>
               <div class="catalog__product-description">
@@ -190,9 +190,9 @@
             <li class="catalog__item product">
               <a href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/buckwheat-big-desktop@1x.png">
-                  <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png">
-                  <img class="catalog__product-photo catalog__product-photo--big" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 1000 г с гречкой">
+                  <source media="(min-width: 1440px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+                  <img class="catalog__product-photo catalog__product-photo--big" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy Pro 1000 г с гречкой">
                 </picture>
               </a>
               <div class="catalog__product-description">
@@ -219,9 +219,9 @@
             <li class="catalog__item product">
               <a href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/rice-small-desktop@1x.png">
-                  <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png">
-                  <img class="catalog__product-photo" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г с рисом">
+                  <source media="(min-width: 1440px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+                  <img class="catalog__product-photo" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy Slim 500 г с рисом">
                 </picture>
               </a>
               <div class="catalog__product-description">
@@ -380,5 +380,7 @@
         </a>
       </div>
     </footer>
+    <script src="js/picturefill.min.js"></script>
+    <script src="js/page-header.js"></script>
   </body>
 </html>
