--- a/source/index.html
+++ b/source/index.html
@@ -11,14 +11,14 @@
       <div class="page-header__wrapper">
         <div class="page-header__top-header">
           <a class="logo page-header__logo">
-          <picture>
-            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-            <img class="page-header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="логотип Cat energy">
-          </picture>
-        </a>
+            <picture>
+              <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img class="page-header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="логотип Cat energy">
+            </picture>
+          </a>
         </div>
-        <nav class="site-nav page-header__site-nav page-header__site-nav--opened">
+        <nav class="site-nav page-header__site-nav page-header__site-nav--opened page-header__site-nav--no-js">
           <button class="page-header__burger-btn burger-btn" type="button" aria-label="Кнопка открыть меню">
             <span class="burger-btn__line"></span>
           </button>
@@ -44,7 +44,7 @@
             <h2 class="promo__title">Функциональное питание для котов</h2>
             <p class="promo__intro">Занялся собой? Займись котом!</p>
           </div>
-          <img class="promo__img" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Cat energy Pro с курицей">
+          <img class="promo__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" width="280" height="271" alt="Cat energy Pro с курицей">
           <a class="btn promo__btn" href="form.html">Подобрать программу</a>
         </div>
       </section>
@@ -215,5 +215,7 @@
         </a>
       </div>
     </footer>
+    <script src="js/picturefill.min.js"></script>
+    <script src="js/page-header.js"></script>
   </body>
 </html>
