--- a/source/catalog.html
+++ b/source/catalog.html
@@ -311,9 +311,9 @@
           </div>
         </div>
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/bg-map-desktop@1x.png">
-          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png">
-          <img class="contacts__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
+          <source media="(min-width: 1440px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
+          <img class="contacts__map" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" width="320" height="400" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
         </picture>
       </section>
     </main>
