--- a/source/index.html
+++ b/source/index.html
@@ -112,16 +112,16 @@
             <ul class="slider__list">
               <li class="slider__item slider__item--current">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/before-desktop@1x.png">
-                  <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png">
-                  <img class="slider__img" src="img/before-mobile@1x.png" width="320" height="240" alt="кот Борис до похудения">
+                  <source media="(min-width: 1440px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
+                  <img class="slider__img" src="img/before-mobile@1x.png" srcset=" img/before-mobile@1x.png 2x" width="320" height="240" alt="кот Борис до похудения">
                 </picture>
               </li>
               <li class="slider__item">
                 <picture>
-                  <source media="(min-width: 1440px)" srcset="img/after-desktop@1x.png">
-                  <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png">
-                  <img class="slider__img" src="img/after-mobile@1x.png" width="320" height="240" alt="кот Борис после похудения">
+                  <source media="(min-width: 1440px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
+                  <img class="slider__img" src="img/after-mobile@1x.png" srcset="img/after-mobile@2x.png 2x" width="320" height="240" alt="кот Борис после похудения">
                 </picture>
               </li>
             </ul>
@@ -146,9 +146,9 @@
           </div>
         </div>
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/bg-map-desktop@1x.png">
-          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png">
-          <img class="contacts__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
+          <source media="(min-width: 1440px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
+          <img class="contacts__map" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" width="320" height="400" alt="Санкт-Петербург, ул. Большая Конюшенная 19/8">
         </picture>
       </section>
     </main>
