--- a/source/index.html
+++ b/source/index.html
@@ -50,6 +50,8 @@
             <p class="promo__intro">Занялся собой? Займись котом!</p>
           </div>
           <picture>
+            <source media="(min-width: 1440px)" type="image/webp" srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@2x.webp 2x">
+            <source media="(min-width: 1440px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
             <source type="image/webp" srcset="img/index-can-mobile@1x.webp 1x, img/index-can-mobile@2x.webp 2x">
             <img class="promo__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" width="280" height="271" alt="Cat energy Pro с курицей">
           </picture>
